--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "hatchling.build"
 
 [project]
 name = "kagglerun"
-version = "0.1.1"
-description = "Execute Python on Kaggle's FREE H100 GPUs from your terminal. Perfect for AI agents."
+version = "0.2.0"
+description = "Execute Python on Kaggle's FREE GPUs (T4/P100/H100) from your terminal. Perfect for AI agents."
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
